# fitness-habit-tracker

./: .gitignore  LICENSE  README.md  spec.txt
.github/workflows/: backend_ci.yml  client_ci.yml
backend/: .env.example  .python-version  Dockerfile  Makefile  alembic.ini  backfill_completions.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  seed.py  seed_badges.py
backend/alembic/migrations/: env.py  script.py.mako
backend/alembic/migrations/versions/: 0001_init.py  14760f0c41d0_add_has_password_field_in_user.py  1a885a71679c_add_habit_completions_table.py  1fb30902280f_update_badge_model.py  2c726b9b3b19_.py  4251a0de8294_change_habits_table.py  52c0dde262e4_add_description_to_habits.py  5d6a5c918d3e_add_provider_field_to_user.py  6688d1d19022_enforce_not_null_on_timestamps.py  8ad8f9d50fb5_add_category_to_habits.py  aefa03a3164b_update_habit_category.py  b657aee89011_add_quantity_to_habit_logs.py  d55da42a0acc_make_user_id_optional_in_badges.py  e28666166609_add_hobby_to_category_enum.py  e6504db70318_add_monthly_to_frequency_enum.py
backend/app/: main.py  problem_details.py  wsgi.py
backend/app/api/dependencies/: get_current_user.py
backend/app/api/routers/: auth.py  habits.py  logs.py  stats.py
backend/app/core/: config.py  rate_limit.py  security.py
backend/app/db/: base_model_imports.py  session.py
backend/app/lib/: get_or_create_user.py
backend/app/middleware/: verify_token.py
backend/app/models/: __init__.py  badge.py  habit.py  habit_completion.py  habit_log.py  user.py
backend/app/routers/: auth.py  badges.py  habits.py  logs.py  stats.py
backend/app/schemas/: auth.py  badge.py  common.py  habit.py  habit_log.py  stats.py  user.py
backend/app/services/: analytics.py  completion_service.py  setup_initial_habits.py
backend/tests/: conftest.py  test_models.py
backend/tests/api/: test_auth.py  test_logs.py  test_stats.py
backend/tests/routers/: test_badges.py  test_habits.py  test_logs.py  test_stats.py
backend/tests/services/: test_analytics.py
client/: .env.example  Dockerfile  PASSWORD_UPDATE_GUIDE.md  USER_PAGE_GUIDE.md  astro.config.mjs  env.d.ts  eslint.config.mjs  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
client/src/: env.d.ts
client/src/components/: Avatar.tsx  Footer.astro  Header.astro
client/src/config/: oauth.ts
client/src/hooks/: useAuth.ts  useBadges.ts  useCalendarLogs.ts  useHabitLog.ts  useHabits.ts  useStats.ts
client/src/islands/: AccountActionIsland.tsx  AuthCheckIsland.tsx  AuthGuardIsland.tsx  AvatarIsland.tsx  BadgeProgressSummaryIsland.tsx  BadgesIsland.tsx  CalendarIsland.tsx  GoogleLoginButtonIsland.tsx  GooglePasswordCheckIsland.tsx  HabitCardIsland.tsx  IndexAuthGuardIsland.tsx  IndividualHabitChartIsland.tsx  IndividualHabitQuickLogIsland.tsx  LoginAuthCheckIsland.tsx  LoginFormIsland.tsx  PasswordSetupIsland.tsx  ProgressChartIsland.tsx  RegisterFormIsland.tsx  StreakCounterIsland.tsx  ToasterIsland.tsx  UserMenuIsland.tsx  UserProfileIsland.tsx
client/src/islands/react/: AccountAction.tsx  AddHabitButton.tsx  AddHabitForm.tsx  AuthCheck.tsx  AuthGuard.tsx  BackButton.tsx  BadgeModal.tsx  BadgeProgressSummary.tsx  Badges.tsx  Calendar.tsx  DarkModeToggle.tsx  DashboardHeader.tsx  GoogleLogin.tsx  GoogleLoginApi.tsx  GoogleLoginButton.tsx  GooglePasswordCheck.tsx  HabitCard.tsx  HabitPageHeader.tsx  HeaderRight.tsx  IndexRedirect.tsx  IndividualHabitChart.tsx  IndividualHabitQuickLog.tsx  LoginAuthCheck.tsx  LoginErrorHandler.tsx  LoginForm.tsx  PasswordSetupForm.tsx  PasswordUpdateForm.tsx  PersistQueryProvider.tsx  ProgressChart.tsx  RegisterForm.tsx  StreakCounter.tsx  Toaster.tsx  UpdateHabitForm.tsx  UpdateHabitSidebar.tsx  UpdateUsernameForm.tsx  UpdateUsernameSidebar.tsx  UserMenu.tsx  UserProfile.tsx
client/src/layouts/: Layout.astro
client/src/lib/: api.ts  avatar.ts  dayjs.ts  getQueryClient.ts  googleAuth.ts
client/src/pages/: Layout.astro  badge-intro.astro  badge.astro  dashboard.astro  index.astro  leaderboard.astro  login.astro  register.astro  setup-password.astro  user.astro
client/src/pages/auth/google/: callback.astro
client/src/pages/habit/: [id].astro
client/src/pages/routers/: badge-intro.astro
client/src/providers/: AuthGuard.tsx  AuthProvider.tsx  GoogleLoginProvider.tsx  QueryProvider.tsx
client/src/schemas/: authSchemas.ts  badgeSchemas.ts  habitSchemas.ts
client/src/store/: auth.ts  authStore.ts  habitStore.ts
client/src/styles/: global.css
