[project]
name = "fitness-habit-tracker-backend"
version = "0.1.0"
description = "FastAPI backend for Fitness & Habit Tracker"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<4.0"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "alembic>=1.13.2,<2.0.0",
  "psycopg2-binary>=2.9.9,<3.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "passlib>=1.7.4,<2.0.0",
  "pydantic[email]>=2.7,<3",
  "pydantic-settings>=2.2.1,<3.0.0",
  "fastapi-limiter>=0.1.6,<0.2.0",
  "redis>=5.0.4,<6.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "bcrypt<4.0",
]

# Dev-only tools go here
[dependency-groups]
dev = [
  "black>=24.4.2,<25.0.0",
  "ruff>=0.4.4,<1.0.0",
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.6,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "coverage>=7.5.3,<8.0.0",
]

# Formatter/linter config (unchanged)
[tool.black]
line-length = 180
target-version = ["py311"]

[tool.ruff]
line-length = 180
select = ["E", "F", "I", "UP", "B"]
ignore = []

# Build backend:
# If you don't plan to publish a wheel, this is fine as-is.
# If you DO plan to build a package, hatchling is a clean default.
[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

# (Optional) If you will build/publish wheels and "app" is a package (has __init__.py),
# keep this so wheels include it. Otherwise you can omit this section.
[tool.hatch.build.targets.wheel]
packages = ["app"]
